2003-02-07  Peter Williams  <peterw@ximian.com>

	* glue/Makefile.am (libgtksharpglue_la_LIBADD): Set this so
	that people linking to libgtksharpglue.so get their
	dependencies.

	(I've had this patch sitting around forever, I think it got
	approved, and it certainly appears correct.)

2003-02-07  Martin Willemoes Hansen <mwh@sysrq.dk>
	* Added a constructor to gdk/Point.custom

2003-02-06  Duncan Mak  <duncan@ximian.com>

	* sources/Gtk.metadata: Correct the metadata for the HTMLStream
	Write method to make it always regenerate the correct
	stuff. Thanks to Rachel for helping me out at the middle of the
	night.

2003-02-06  Duncan Mak  <duncan@ximian.com>

	* api/gtk-api.xml:
	* sources/Gtk.metadata: 
	* gtk/Window.custom: Mark out params in gtk_window_get_size and gtk_window_get_default_size.

2003-02-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* glib/SignalCallback.cs: new methods AddDelegate and RemoveDelegate.

	* generator/Signal.cs: add/remove signal handlers from the delegate used
	to invoke them.

	* generator/SignalHandler.cs: use Delegate instead of MulticastDelegate.

2003-02-05  Rodrigo Moya <rodrigo@ximian.com>

	* gda/Application.cs:
	* gnomedb/Application.cs: synced version number with its corresponding
	C library version.

2003-01-29  Duncan Mak  <duncan@ximian.com>

	* gtk/Widget.custom: Add a nice overload, rename it to
	'RequestSize' instead of 'SizeRequest' to avoid a name clash.

	* api/gtk-api.xml: 
	* sources/Gtk.metadata: out param for gtk_widget_get_size_request.

	* gtk/Window.custom: Add some overloads.

	* api/gtk-api.xml:
	* sources/Gtk.metadata:
	* sources/Pango.metadata: Add some more metadata rules.

2003-01-28  Rodrigo Moya <rodrigo@ximian.com>

	* configure.in:
	* api/gda-api.xml:
	* api/gnomedb-api.xml:
	* sources/gtk-sharp.sources:
	* sources/Gda.metadata: added support for latest libgda/libgnomedb.

2003-01-22  Radek Doulik  <rodo@ximian.com>

	* sources/Gtk.metadata: disable default contructor for Frame in
	metadata
