@@ -1,3 +1,7 @@
+2003-02-08  Radek Doulik  <rodo@ximian.com>
+
+	* gconf/GConf/Client.cs: added SyggestSync method
+
 2003-02-07  Peter Williams  <peterw@ximian.com>
 
 	* glue/Makefile.am (libgtksharpglue_la_LIBADD): Set this so
